2-Traefik/traefik-internal-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service

spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - name: traefic-http
      targetPort: web
      port: 80
    - name: traefic-https
      targetPort: websecure
      port: 443
  selector:
    app: traefik
